examples/test/testpolicy19787.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19787
  namespace: namespace420
spec:
  podSelector:
    matchLabels:
      key36: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value19
      podSelector:
        matchLabels:
          key5: value5
          key20: value5
          key4: value43
